changed proposalLots from returning TaxLot objects to DraftLot objects; changed proposalTableRow so that it also returns proposalLots and so it returns lots, a new variable which holds the referenceLot numbers in the portfolio; changed proposalTableColumn tag so that it now returns a draftTaxLot that is unique to a specific referenceLot and Portfolio; added filters to the proposalTableColumn.html so that the units, cps, and mv numbers from the draftTaxLot are now shown in 2 decimal places and humanized

--- a/lots/templates/proposalTableColumn.html
+++ b/lots/templates/proposalTableColumn.html
@@ -1,4 +1,5 @@
 {% load proposal_extras %}
-<td>{{draftTaxLot.units}}</td>
-<td>cps</td>
-<td>mv</td>
+{% load humanize %}
+<td>{{draftTaxLot.units|floatformat:4}}</td>
+<td>${{draftTaxLot.cps|floatformat:2|intcomma}}</td>
+<td>${{draftTaxLot.mv|floatformat:2|intcomma}}</td>
