added totalCost to summaryTotals variable in proposalTableRow. This allows for totalCost of the holding to be shown on the proposal.html page.

--- a/lots/templates/proposalTableRow.html
+++ b/lots/templates/proposalTableRow.html
@@ -5,7 +5,7 @@
     <td></td>
     {% for summaryTotal in summaryTotals %}
     <td>{{summaryTotal.totalUnits|floatformat:4|intcomma}}</td>
-    <td></td>
+    <td>{{summaryTotal.totalCost|floatformat:4|intcomma}}</td>
     <td>${{summaryTotal.totalMV|floatformat:2|intcomma}}</td>
     {% endfor %}
 </tr>
