adding draftPortfolio Totals to proposal.html; adding proposalTableTotals.html template and proposalTableTable inclusion tag in proposal_extras. This is to allow for draftPortfolio totals.

--- a/lots/templates/proposalTable.html
+++ b/lots/templates/proposalTable.html
@@ -15,5 +15,6 @@
         {% for ticker in tickers %}
         {% proposalTableRow summaryTotals ticker closingPrices closingDate proposal proposalLots %}
         {% endfor %}
+        {% proposalTableTotals proposalLots tickers closingPrices closingDate proposal %}
     </tbody>
 </table>
