--- a/lots/templates/proposalTableRow.html
+++ b/lots/templates/proposalTableRow.html
@@ -1,6 +1,7 @@
 {% load proposal_extras %}
 {% load humanize %}
 <tr>
+    <td><button class="rowExpandButton"></button></td>
     <td>{{ticker}}</td>
     <td></td>
     {% for summaryTotal in summaryTotals %}
@@ -9,22 +10,28 @@
     <td>${{summaryTotal.totalMV|floatformat:2|intcomma}}</td>
     {% endfor %}
 </tr>
-<tr>
-    <th>Ticker</th>
-    <th>Referenced Lot</th>
-    {% for draftPortfolio in proposal.draftPortfolios.all %}
-    <th>Units in Draft Portfolio {{draftPortfolio.id}}</th>
-    <th>Cost Per Share</th>
-    <th>MV of Lot</th>
+<tbody>
+    <tr class="tableLotHeader">
+        <td></td>
+        <th>Ticker</th>
+        <th>Referenced Lot</th>
+        {% for draftPortfolio in proposal.draftPortfolios.all %}
+        <th>Units in Draft Portfolio {{draftPortfolio.id}}</th>
+        <th>Cost Per Share</th>
+        <th>MV of Lot</th>
+        {% endfor %}
+    </tr>
+    {% for lot in lots %}
+    <tr class="tableLot">
+        <td></td>
+        <td>{{ticker}}</td>
+        <td>{{lot}}</td>
+        {% for draftPortfolio in proposal.draftPortfolios.all %}
+        {% proposalTableColumn lot draftPortfolio proposalLots %}
+        {% endfor %}
+    </tr>
     {% endfor %}
-</tr>
-{% for lot in lots %}
-<tr>
-    <td>{{ticker}}</td>
-    <td>{{lot}}</td>
-    {% for draftPortfolio in proposal.draftPortfolios.all %}
-    {% proposalTableColumn lot draftPortfolio proposalLots %}
-    {% endfor %}
-</tr>
-{% endfor %}
+</tbody>
+
+
 
