--- a/lots/templates/base.html
+++ b/lots/templates/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lot Divider</title>
-
+    {% block headerExtras %}{% endblock %}
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 </body>
 
 <footer>
-    {% block headerExtras %}{% endblock %}
+    {% block footerExtras %}{% endblock %}
 </footer>
 
 </html>
