--- a/lots/templates/base.html
+++ b/lots/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lot Divider</title>
-    {% block headerExtras %}{% endblock %}
+    {% block headerExtras %}
+    <link rel="stylesheet" href="{% static 'css/lots.css' %}">
+    {% endblock %}
 </head>
 
 <body>
