--- a/lots/templates/loginPage.html
+++ b/lots/templates/loginPage.html
@@ -1,31 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lot Divider</title>
-</head>
-<body>
-    {% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
-            {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
-            {{ message }}
-        </li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-    <h1>Welcome to LotDivider</h1>
-    <h2>Login</h2>
-    <form method="POST" action="/login">
-        {% csrf_token %}
-        {{ form }}
-        <!-- {{ form2 }}
-        {{ form3 }} -->
-        <button>Login</button>
-        <a href="/register">Don't have an account? Register here</a>
-    </form>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block headings %}
+<h1>Welcome to LotDivider</h1>
+<h2>Login</h2>
+{% endblock %}
+
+{% block body %}
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
+        {{ message }}
+    </li>
+    {% endfor %}
+</ul>
+{% endif %}
+<form method="POST" action="/login">
+    {% csrf_token %}
+    {{ form }}
+    <!-- {{ form2 }}
+    {{ form3 }} -->
+    <button>Login</button>
+    <a href="/register">Don't have an account? Register here</a>
+</form>
+{% endblock %}
