changing a tag link in projectDashboard for New Proposal back to original form. From this point on, will be trying to decouple server from client side by adding separate API and and front end framework. Will be using Django REST framework for backend API

--- a/lots/templates/newProposal.html
+++ b/lots/templates/newProposal.html
@@ -1,61 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+{% block body %}
+<h1>New Proposal in Project "{{project.name}}"</h1>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lot Divider</title>
-</head>
-
-<body>
-    <h1>{{ account.name }}</h1>
-    <h2>{{ account.number }}</h2>
-    <a href="/projects/{{project.id}}/portfolios/{{portfolio.id}}/accounts/{{account.id}}/">Back</a>
-    <a href="/dashboard/">Dashboard</a>
-    <a href="/logout/">Logout</a>
-    <form method="POST" action="/projects/{{project.id}}/portfolios/{{portfolio.id}}/accounts/{{account.id}}/proposals/new/">
-        {% csrf_token %}
-        <div>
-            <label for="method">Select Method:</label>
-            <select name="method">
-                <option value="HIFO">Highest Cost, First Out</option>
-                <option value="LIFO">Last In, First Out</option>
-                <option value="FIFO">Last In, First Out</option>
-            </select>
-        </div>
-        <div>
-            <label for="numberOfPortfolios">Number of Portfolios:</label>
-            <input name="numberOfPortfolios"></input>
-        </div>
-        <table>
-            <thead>
-                <tr>
-                    <td>Ticker</td>
-                    <td>Name</td>
-                    <td>Total Federal Cost</td>
-                    <td>Total State Cost</td>
-                    <td>Units</td>
-                    <td>Shares to Distribute</td>
-                </tr>
-            </thead>
-            <tbody>
-                {% for holding in holdings %}
-                <tr>
-                    <td>{{ holding.ticker }}</td>
-                    <td>{{ holding.name }}</td> 
-                    <td>{{ holding.totalFederalCost }}</td>
-                    <td>{{ holding.totalStateCost }}</td>
-                    <td>{{ holding.totalUnits }}</td>
-                    <td>
-                        <input name={{holding.ticker}}></input>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <button>Split/Distribute Portfolio</button>
-    </form>
-</body>
-
-</html>
+<a href="/projects/{{project.id}}/portfolios/{{portfolio.id}}/accounts/{{account.id}}/">Back</a>
+<a href="/dashboard/">Dashboard</a>
+<a href="/logout/">Logout</a>
+<form method="POST" action="/projects/{{project.id}}/portfolios/{{portfolio.id}}/accounts/{{account.id}}/proposals/new/">
+    {% csrf_token %}
+    <div>
+        <label for="method">Select Method:</label>
+        <select name="method">
+            <option value="HIFO">Highest Cost, First Out</option>
+            <option value="LIFO">Last In, First Out</option>
+            <option value="FIFO">Last In, First Out</option>
+        </select>
+    </div>
+    <div>
+        <label for="numberOfPortfolios">Number of Portfolios:</label>
+        <input name="numberOfPortfolios"></input>
+    </div>
+    <table>
+        <thead>
+            <tr>
+                <td>Ticker</td>
+                <td>Name</td>
+                <td>Total Federal Cost</td>
+                <td>Total State Cost</td>
+                <td>Units</td>
+                <td>Shares to Distribute</td>
+            </tr>
+        </thead>
+        <tbody>
+            {% for holding in holdings %}
+            <tr>
+                <td>{{ holding.ticker }}</td>
+                <td>{{ holding.name }}</td> 
+                <td>{{ holding.totalFederalCost }}</td>
+                <td>{{ holding.totalStateCost }}</td>
+                <td>{{ holding.totalUnits }}</td>
+                <td>
+                    <input name={{holding.ticker}}></input>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    <button>Split/Distribute Portfolio</button>
+</form>
+{% endblock %}
