--- a/lots/templates/projectDashboard.html
+++ b/lots/templates/projectDashboard.html
@@ -1,66 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static './lots.css'%}">
-    <title>Lot Divider</title>
-</head>
-
-<body>
-    <h1>{{ project.name }}</h1>
-    <h2>{{ project.number }}</h2>
-    <a href="/projects/{{project.id}}/portfolios/">New Proposal</a>
-    <a href="/dashboard/">Dashboard</a>
-    <a href="/logout/">Logout</a>
-    <!-- <table>
-        <h2>Portfolios used in this project:</h2>
-        <thead>
-            <tr>
-                <th>Portfolio Name</th>
-                <th>Portfolio Number</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for portfolio in portfolios %}
-            <tr>
-                <td>{{ portfolio.name}}</td>
-                <td>{{ portfolio.number}}</td>
-                <td>
-                    <a href="/projects/{{project.id}}/portfolios/{{portfolio.id}}">Link</a>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table> -->
-    <table>
-        <h2>Proposals</h2>
-        <thead>
-            <tr>
-                <th>Proposal Id</th>
-                <th>Proposal Name</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for proposal in project.proposals.all %}
-            <tr>
-                <td>{{proposal.id}}</td>
-                <td>{{proposal.name}}</td>
-                <td>
-                    <a href="/proposals/{{proposal.id}}/">View</a>
-                    <a href="/proposals/{{proposal.id}}/edit/">Edit</a>
-                    <a href="/proposals/{{proposal.id}}/delete/">Delete</a>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-
-</body>
-
-</html>
+{% block body %}
+<h1>{{ project.name }}</h1>
+<h2>{{ project.number }}</h2>
+<a href="/projects/{{project.id}}/portfolios">New Proposal</a>
+<a href="/dashboard/">Dashboard</a>
+<a href="/logout/">Logout</a>
+<table>
+    <h2>Proposals</h2>
+    <thead>
+        <tr>
+            <th>Proposal Id</th>
+            <th>Proposal Name</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for proposal in project.proposals.all %}
+        <tr>
+            <td>{{proposal.id}}</td>
+            <td>{{proposal.name}}</td>
+            <td>
+                <a href="/proposals/{{proposal.id}}/">View</a>
+                <a href="/proposals/{{proposal.id}}/edit/">Edit</a>
+                <a href="/proposals/{{proposal.id}}/delete/">Delete</a>
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+{% endblock %}
